video/ome/svc-viewer-origin/api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: ovenmediaengine
    ome-type: origin
  ports:
  - name: http
    port: 80
    targetPort: api
