video/ome/svc-viewer-origin/viewer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: viewer
spec:
  selector:
    app: ovenmediaengine
    ome-type: origin
  ports:
  - name: http
    port: 80
    targetPort: publish
# - name: downstream-tls
#   port: 3334
